# amcGA

./: .pylintrc  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflow/: lint.yml  test.yml
.github/workflows/: coverage.yml  lint.yml  test.yml
src/amcGA/: abst.py
src/amcga/: abst.py  adaptive_mutation.py  change_detection.py  change_trend.py  solution_base.py
tests/: __main__.py  test_abst.py  test_adaptive_mutation.py  test_change_detection.py  test_change_trend.py  test_solution_base.py
