[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amcGA_juzor"
version = "0.0.1"
authors = [
  { name="Chigozirim Uzor", email="chigozirim.uzor@outlook.com" },
]
description = "An implementation of the adaptive mutation compact genetic algorithm (binary encoded)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/juzor/amcGA"
Issues = "https://github.com/juzor/amcGA/issues"
